--- a/technomart/css/style.css
+++ b/technomart/css/style.css
@@ -7,10 +7,18 @@ body{
 
 /* index: Интернет-магазин */
 .shop-block{
+    float: left;
+    width: 200px;
+    min-height: 100px;
+    margin-left: 54px;
+    margin-top: 0px;
+    
 	font-style: italic;
     font-size: 16px;
     line-height: 23px;
     color: #ff3333;
+
+    background: orange;
 }
 
 /* index: Заглавия слайдера */
@@ -20,6 +28,18 @@ body{
     line-height: 30px;
     color: #ffffff;
 }
+
+/* index: Популярные товары + Популярные производители */
+.section-title-text{
+    float: left;
+    
+    font-size: 30px;
+    line-height: 30px;
+    color: #32425c;
+
+    background: orange;
+}
+
 
 /* index: Названия товаров каталога */
 /* catalog: Названия товаров каталога */
@@ -37,6 +57,8 @@ body{
 .block-title{
 	font-size: 30px;
     line-height: 24px;
+
+    background: orange;
 }
 
 /* index: Заглавия описаний серивсов (Доставка, Гарантия, Кредит) */
@@ -51,6 +73,8 @@ body{
     font-size: 30px;
     line-height: 30px;
     color: #333366;
+
+    background: green;
 }
 
 /* catalog: Заглавие фильтра "Цена" */
@@ -63,3 +87,384 @@ body{
     line-height: 30px;
 }
 
+
+
+/* CЕТКА */
+/* index */
+
+.clearfix:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.main-header{
+    padding: 5px;
+
+    background: #f1f5f7;
+}
+
+.header-top{
+    padding: 5px;
+
+    background: #293449;
+}
+
+.container{
+    width: 940px;
+    margin: 0 auto;
+    padding: 5px;
+       
+    background: yellow;
+}
+
+.logo{
+    float: left;
+    width: 220px;
+    padding: 12px 0;
+    text-align: center;
+
+    background: red;
+}
+
+.search-btn{
+    float: left;
+    width: 240px;
+    padding: 12px;
+
+    background: white;
+}
+
+.header-btn{
+    float: right;
+    width: 150px;
+    padding: 12px 0;
+    text-align: center;
+
+    background: white;
+}
+
+.header-bottom{
+     padding: 5px;
+
+     background: #f1f5f7;
+}
+
+.info-container{
+    padding: 10px;
+    margin-bottom: 5px;  
+
+    background: green;
+}
+
+.contact-block{
+    float: left;
+    width: 320px;
+    min-height: 100px;
+    margin-left: 54px;
+
+    background: orange;
+}
+
+.user-block{
+    float: right;
+    width: 280px;
+    min-height: 100px;
+    margin-top: 0px;
+
+    background: orange;
+}
+
+.main-navigation{
+    background: green;
+}
+
+.promo-catalog-top{
+    padding: 5px;
+
+    background: green;
+}
+
+.promo-catalog-item{
+    width: 300px;
+    min-height: 123px;
+    
+    background: orange;
+}
+
+.materials{
+    float: left;
+    margin-right: 15px;
+}
+
+.instrument{
+    float: left;
+}
+
+.equipment{
+    float: right;
+}
+
+
+.promo-catalog-bottom{
+    padding: 5px;
+
+    background: green;
+}
+
+.slider{
+    float: left;
+    width: 620px;
+    min-height: 266px;
+
+    background: orange;
+}
+
+.items-block{
+    float: right;
+    background: green;
+}
+
+.discount{
+    margin-bottom: 5px;
+
+}
+
+.section-title{
+    margin: 5px 0;
+
+    background: #f7f3ec;
+
+}
+
+.section-title a{
+    float: right;
+    
+    background: orange;
+}
+
+.catalog{
+    background: green;
+}
+
+.catalog-item{
+    float: left;
+    width: 220px;
+    margin-right: 20px;
+    background: blue;
+}
+
+.catalog-item:last-child{
+    float: right;
+    margin-right: 0px;
+    background: blue;
+}
+
+.catalog-firms{
+    background: green;
+}
+
+.catalog-firms-item{
+    display: inline-block;
+    vertical-align: top;
+    width: 220px;
+    min-height: 143px;
+    text-align: center;
+
+    margin-bottom: 5px;
+    margin-right: 11px;
+
+    background: blue;
+}
+
+.service{
+    background: #f2f6f8;
+}
+
+.service-types{
+    background: green;
+}
+
+.service-types-menu{
+    float: left;
+    width: 240px;
+    min-height: 182px;
+    margin: 5px;
+
+    background: white;
+}
+
+.service-description{
+    float: right;
+    width: 620px;
+    min-height: 182px;
+    margin: 5px;
+
+    background: white;
+}
+
+.contacts-block{
+    padding: 5px;
+
+    background: green;
+}
+
+.company{
+    float: left;
+    width: 560px;
+    
+    background: white;
+}
+
+.contacts{
+    float: right;
+    width: 300px;
+    
+    background: white;
+}
+
+.main-footer{
+    padding: 5px;
+
+    background: #293449;
+}
+
+.footer-top{
+    margin-bottom: 5px;
+    background: #32425c;
+}
+
+.footer-column-left{
+    float: left;
+    width: 380px;
+    padding-bottom: 150px;
+
+    background: orange;
+}
+
+.adress{
+    margin-top: 70px;
+
+    background: white;
+}
+
+.footer-column-right{
+    float: right;
+    width: 550px;
+
+    background: orange;
+}
+
+.footer-navigation{
+    background: red;
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.footer-rights{
+    float: left;
+    width: 310px;
+    margin-right: 30px;    
+
+    background: white;
+}
+
+.footer-social{
+    float: left;
+    width: 150px;
+    margin-right: 30px; 
+
+    background: white;
+}
+
+.footer-feedback{
+    float: left;
+    width: 140px;
+    margin-right: 30px; 
+
+    background: white;
+}
+
+.footer-copyright{
+    float: right;
+    width: 140px;
+    
+    background: white;
+}
+
+
+/* Catalog */
+.breadcrumbs{
+    background: green;
+}
+
+.main-container{
+    background: green;
+}
+
+.sidebar{
+    float: left;
+    width: 220px;
+
+    margin: 5px;
+
+    background: orange;
+}
+
+.main-catalog{
+    float: right;
+    width: 700px;
+
+    padding: 5px;
+
+    background: orange;
+}
+
+.sorting{
+    margin-bottom: 5px;
+    padding: 5px;
+    background: red;
+}
+
+.sorting-name{
+    float: left;
+    width: 160px;
+
+    background: white;
+}
+
+.sorting-points{
+    float: right;
+    width: 460px;
+    margin: 0;
+
+    background: white;
+}
+
+.catalog-block{
+    margin-bottom: 5px;
+    background: red;
+}
+
+.catalog-block-item{
+    display: inline-block;
+    vertical-align: top;
+    width: 220px;
+    min-height: 143px;
+    text-align: center;
+
+    margin-bottom: 5px;
+    margin-right: 10px;
+
+    background: white;
+}
+
+.pagination{
+    margin: 0;
+
+    background: red;    
+}
+
+.about-info{
+    background: #f2f6f8;
+}
