--- a/technomart/css/style.css
+++ b/technomart/css/style.css
@@ -5,6 +5,8 @@ body{
     color: #000000;
 }
 
+/* font-family: 'PT Sans', Arial, sans-serif; */
+
 /* index: Интернет-магазин */
 .shop-block{
     float: left;
@@ -12,7 +14,7 @@ body{
     min-height: 100px;
     margin-left: 54px;
     margin-top: 0px;
-    
+
 	font-style: italic;
     font-size: 16px;
     line-height: 23px;
@@ -32,7 +34,7 @@ body{
 /* index: Популярные товары + Популярные производители */
 .section-title-text{
     float: left;
-    
+
     font-size: 30px;
     line-height: 30px;
     color: #32425c;
@@ -114,7 +116,7 @@ body{
     width: 940px;
     margin: 0 auto;
     padding: 5px;
-       
+
     background: yellow;
 }
 
@@ -152,7 +154,7 @@ body{
 
 .info-container{
     padding: 10px;
-    margin-bottom: 5px;  
+    margin-bottom: 5px;
 
     background: green;
 }
@@ -177,6 +179,7 @@ body{
 
 .main-navigation{
     background: green;
+    font-family: 'PT Sans', Arial, sans-serif;
 }
 
 .promo-catalog-top{
@@ -188,7 +191,7 @@ body{
 .promo-catalog-item{
     width: 300px;
     min-height: 123px;
-    
+
     background: orange;
 }
 
@@ -239,7 +242,7 @@ body{
 
 .section-title a{
     float: right;
-    
+
     background: orange;
 }
 
@@ -312,14 +315,14 @@ body{
 .company{
     float: left;
     width: 560px;
-    
+
     background: white;
 }
 
 .contacts{
     float: right;
     width: 300px;
-    
+
     background: white;
 }
 
@@ -364,7 +367,7 @@ body{
 .footer-rights{
     float: left;
     width: 310px;
-    margin-right: 30px;    
+    margin-right: 30px;
 
     background: white;
 }
@@ -372,7 +375,7 @@ body{
 .footer-social{
     float: left;
     width: 150px;
-    margin-right: 30px; 
+    margin-right: 30px;
 
     background: white;
 }
@@ -380,7 +383,7 @@ body{
 .footer-feedback{
     float: left;
     width: 140px;
-    margin-right: 30px; 
+    margin-right: 30px;
 
     background: white;
 }
@@ -388,7 +391,7 @@ body{
 .footer-copyright{
     float: right;
     width: 140px;
-    
+
     background: white;
 }
 
@@ -462,9 +465,29 @@ body{
 .pagination{
     margin: 0;
 
-    background: red;    
+    background: red;
 }
 
 .about-info{
     background: #f2f6f8;
 }
+
+
+base (нормалайз, базовые шрифты, портальны фреймворк)
+project
+  header (который повторяется со всеми модификациями)
+  page-1 (стили страницы)
+    section-1 (стили секции на странице)
+    ...
+    section-n
+  ...
+  page-n
+  footer (который потворяется со всеми модификациями)
+
+
+
+/*===================
+  Header
+==================== */
+
+/* section - 1 */
