--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 body{
     font-family: "PT Sans Narrow", "Arial", sans-serif;
-    font-weight: bold;
     font-size: 14px;
     line-height: 24px;
-    color: black;
+
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+
+    min-width: 960px;
+    background: #111 url("../img/bg-main.jpg") no-repeat center top;
 }
 
 .clearfix:after {
@@ -17,6 +22,11 @@ body{
     Header
     =================================================*/
 
+    .main-header{
+        margin-bottom: 60px;
+        background: #000;
+    }
+
     .container{
         width: 940px;
         margin: 0 auto;
@@ -24,7 +34,7 @@ body{
 
     .main-navigation{
         float: left;
-        width: 800px;
+        width: 780px;
     }
 
     .main-navigation ul{
@@ -35,14 +45,88 @@ body{
 
     .main-navigation li{
         display: inline-block;
+        vertical-align: top;
         font-size: 16px;
+        line-height: 20px;
+    }
+
+    .main-navigation a{
+        display: block;
+        padding: 25px 20px;   
+
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .main-navigation a:hover{
+        background: #242424;
+    }
+
+    .main-navigation .active a{
+        position: relative;
+    }
+
+    .main-navigation .active a:after{
+        content: "";
+
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        left: 20px;
+        right: 20px;
+
+        height: 5px;
+        background: white;
+    }
+
+    .main-navigation .active a:hover{
+        background: none;
     }
 
     .user-block{
         float: right;
-        width: 90px;
+        max-width: 140px;
+    }
+    
+    .login{
+        position: relative;
+
+        display: inline-block;
+        vertical-align: top;
+        padding: 25px 20px;
+        padding-left: 50px;
+        font-size: 16px;
+        line-height: 20px;
+        text-decoration: none;
+
+        color: white;
     }
 
+    .login:hover{
+        background: #242424;
+    }
+
+    .login:before{
+        content: "";
+
+        position: absolute;
+
+        top: 28px;
+        left: 20px;
+
+        width: 18px;
+        height: 18px;
+
+        background: transparent url("../img/icon-sign-in.png") no-repeat;        
+        opacity: .3;
+
+        outline: 5px solid red;
+    }
+
+    .login:hover:before{
+        opacity: 1;
+    }
 
 
     /*====== page-1 INDEX ======*/
